--- a/test.ipynb
+++ b/test.ipynb
@@ -36,6 +36,149 @@
     "df = pd.read_csv(\"car_price_dataset.csv\")\n",
     "df.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Engine_Size</th>\n",
+       "      <th>Mileage</th>\n",
+       "      <th>Doors</th>\n",
+       "      <th>Owner_Count</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2011.543700</td>\n",
+       "      <td>3.000560</td>\n",
+       "      <td>149239.111800</td>\n",
+       "      <td>3.497100</td>\n",
+       "      <td>2.991100</td>\n",
+       "      <td>8852.96440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6.897699</td>\n",
+       "      <td>1.149324</td>\n",
+       "      <td>86322.348957</td>\n",
+       "      <td>1.110097</td>\n",
+       "      <td>1.422682</td>\n",
+       "      <td>3112.59681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2000.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2000.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2006.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>74649.250000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>6646.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2012.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>149587.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>8858.50000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2017.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>223577.500000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>11086.50000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2023.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>299947.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>18301.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Year   Engine_Size        Mileage         Doors   Owner_Count  \\\n",
+       "count  10000.000000  10000.000000   10000.000000  10000.000000  10000.000000   \n",
+       "mean    2011.543700      3.000560  149239.111800      3.497100      2.991100   \n",
+       "std        6.897699      1.149324   86322.348957      1.110097      1.422682   \n",
+       "min     2000.000000      1.000000      25.000000      2.000000      1.000000   \n",
+       "25%     2006.000000      2.000000   74649.250000      3.000000      2.000000   \n",
+       "50%     2012.000000      3.000000  149587.000000      3.000000      3.000000   \n",
+       "75%     2017.000000      4.000000  223577.500000      4.000000      4.000000   \n",
+       "max     2023.000000      5.000000  299947.000000      5.000000      5.000000   \n",
+       "\n",
+       "             Price  \n",
+       "count  10000.00000  \n",
+       "mean    8852.96440  \n",
+       "std     3112.59681  \n",
+       "min     2000.00000  \n",
+       "25%     6646.00000  \n",
+       "50%     8858.50000  \n",
+       "75%    11086.50000  \n",
+       "max    18301.00000  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()\n",
+    "df.dropna(inplace=True)"
+   ]
   }
  ],
  "metadata": {
