--- a/test.ipynb
+++ b/test.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,14 +170,43 @@
        "max    18301.00000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe()\n",
-    "df.dropna(inplace=True)"
+    "# df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Missing Values:\n",
+      " Brand           0\n",
+      "Model           0\n",
+      "Year            0\n",
+      "Engine_Size     0\n",
+      "Fuel_Type       0\n",
+      "Transmission    0\n",
+      "Mileage         0\n",
+      "Doors           0\n",
+      "Owner_Count     0\n",
+      "Price           0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nMissing Values:\\n\", df.isnull().sum())"
    ]
   }
  ],
