--- a/test.ipynb
+++ b/test.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -206,6 +206,8 @@
     }
    ],
    "source": [
+    "# Check for missing values\n",
+    "\n",
     "print(\"\\nMissing Values:\\n\", df.isnull().sum())"
    ]
   }
