--- a/test.ipynb
+++ b/test.ipynb
@@ -210,6 +210,44 @@
     "\n",
     "print(\"\\nMissing Values:\\n\", df.isnull().sum())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Summary Statistics:\n",
+      "                Year   Engine_Size        Mileage         Doors   Owner_Count  \\\n",
+      "count  10000.000000  10000.000000   10000.000000  10000.000000  10000.000000   \n",
+      "mean    2011.543700      3.000560  149239.111800      3.497100      2.991100   \n",
+      "std        6.897699      1.149324   86322.348957      1.110097      1.422682   \n",
+      "min     2000.000000      1.000000      25.000000      2.000000      1.000000   \n",
+      "25%     2006.000000      2.000000   74649.250000      3.000000      2.000000   \n",
+      "50%     2012.000000      3.000000  149587.000000      3.000000      3.000000   \n",
+      "75%     2017.000000      4.000000  223577.500000      4.000000      4.000000   \n",
+      "max     2023.000000      5.000000  299947.000000      5.000000      5.000000   \n",
+      "\n",
+      "             Price  \n",
+      "count  10000.00000  \n",
+      "mean    8852.96440  \n",
+      "std     3112.59681  \n",
+      "min     2000.00000  \n",
+      "25%     6646.00000  \n",
+      "50%     8858.50000  \n",
+      "75%    11086.50000  \n",
+      "max    18301.00000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get summary statistics\n",
+    "print(\"\\nSummary Statistics:\\n\", df.describe())"
+   ]
   }
  ],
  "metadata": {
