--- a/test.ipynb
+++ b/test.ipynb
@@ -248,6 +248,36 @@
     "# Get summary statistics\n",
     "print(\"\\nSummary Statistics:\\n\", df.describe())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Data Types:\n",
+      " Brand            object\n",
+      "Model            object\n",
+      "Year              int64\n",
+      "Engine_Size     float64\n",
+      "Fuel_Type        object\n",
+      "Transmission     object\n",
+      "Mileage           int64\n",
+      "Doors             int64\n",
+      "Owner_Count       int64\n",
+      "Price             int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check data types\n",
+    "print(\"\\nData Types:\\n\", df.dtypes)"
+   ]
   }
  ],
  "metadata": {
